<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_actions"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_refresh_black_24dp"
        app:showAsAction="always"/>

    <item android:id="@+id/action_two"
        android:orderInCategory="100"
        android:title="@string/action_two"
        app:showAsAction="never"/>

    <item android:id="@+id/action_three"
        android:orderInCategory="100"
        android:title="@string/action_three"
        app:showAsAction="never"/>

</menu>